# asrd

./: .gitignore  CHANGELOG.md  README.md  mise.toml  pyproject.toml  qwen3_asr_server.py  start_voxt_asr_server.py  todo.md  voxt_llm_reference.py
.github/workflows/: ci.yml  release.yml
docs/: realtime_asr_optimization_options.md
examples/voxt/: llm_reference_server.py
launchd/: com.sid.voxt-qwen3-asr.plist
scripts/: deploy_launchd.py
src/asrd/: __init__.py  audio.py  cli.py  server.py  util.py
src/asrd/service/: __init__.py  launchd.py
src/asrd/service/templates/: com.sid.asrd.plist
tests/: test_audio.py  test_cli.py  test_integration_mock.py  test_launchd.py  test_server_helpers.py  test_util.py
voxt_qwen3_asr/: __init__.py  cli.py  server.py
