[project]
name = "asrd"
version = "0.2.1"
description = "Local OpenAI-compatible ASR daemon powered by MLX/Qwen3-ASR"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
  "huggingface_hub>=1.0",
  "mlx-qwen3-asr[serve]>=0.3.5",
  "uvicorn>=0.20.0",
  "websockets>=12.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[project.scripts]
asrd = "asrd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/asrd/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/asrd"]
